1.3.2 ->
=================
* Enhancement:
  * rhbz#628420: move none state from checkbox to selector
* Translations updated:
  * Dutch

1.3.1 -> 1.3.2
=================
* Bug Fix:
  * rhbz#607513: Border around input method list
* Translations updated:
  * Bulgarian
  * Dutch
  * German
  * Persian

1.3.0 -> 1.3.1
=================
* Bug Fix:
  * rhbz#604482: Fallback to the themed icon.
* Translations updated:
  * Arabic
  * Traditional Chinese

1.2.7 -> 1.3.0
=================
* Enhancements:
  * rhbz#528850: Stock icon support in the config file.
  * New icons by Lapo Calamandrei and Jakub Steiner
* Translations updated:
  * Asturian
  * Brazilian Portuguese
  * English (United Kingdom)
  * Geek
  * German
  * Hungarian
  * Korean
  * Polish
  * Punjabi
  * Russian
  * Sinhala
  * Spanish
  * Ukrainian

1.2.6 -> 1.2.7
=================
* Bug Fix:
  * rhbz#487275: Fix a typo in the desktop file.

* Translations updated:
  * Danish
  * Finnish
  * Greek
  * Icelandic
  * Maithili
  * Norwegian Bokmål
  * Punjabi
  * Simplified Chinese
  * Spanish
  * Thai

1.2.5 -> 1.2.6
=================
* Support imsettings-0.106.0

1.2.4 -> 1.2.5
=================
* Bug Fixes:
  * Fix no translation displayed in some places.
  * Show the log out button if something required.

* Translations updated
  * Hungarian
  * Italian
  * Japanese
  * Malayalam
  * Slovak

1.2.3 -> 1.2.4
=================
* Improvement
  * change the option order.
* Translations updated
  * Assamese
  * Bengali India
  * Brazilian Portuguese
  * Catalan
  * Czech
  * Dutch
  * French
  * Gujarati
  * Hindi
  * Indonesian
  * Japanese
  * Kannada
  * Korean
  * Marathi
  * Oriya
  * Polish
  * Portuguese
  * Punjabi
  * Russian
  * Serbian
  * Serbian Latin
  * Spanish
  * Swedish
  * Tamil
  * Telugu
  * Traditional Chinese

1.2.2 -> 1.2.3
=================
* Enhancement
  * Add an option to show/hide the applet icon at the systray.
* Translations updated
  * Brazilian Portuguese
  * Dutch
  * Finnish