@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Input Method selector
+_Name=Input Method Selector
 _Comment=Choose the input method to be used or disable the input method usage on the desktop
 Exec=im-chooser
 Icon=im-chooser
