@@ -2,8 +2,13 @@
 =================
 * Enhancement:
   * rhbz#628420: move none state from checkbox to selector
+  * rhbz#607502: Window title
+  * GTK3 support
+  * Get rid of libgnomeui dependency
 * Translations updated:
   * Dutch
+  * Norwegian Bokmål
+  * Turkish
 
 1.3.1 -> 1.3.2
 =================
